feat: plug ORM + tests + DB init script

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,6 @@
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
+
+# SQLAlchemy
+DATABASE_URL=postgresql://user:password@database:port/db
