--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:3.13.5-slim
 
-WORKDIR /src/app
+WORKDIR /src
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY src ./src
 
-COPY . .
+RUN pip install --no-cache-dir -r src/app/requirements.txt
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "src.app.main:app", "--host", "0.0.0.0", "--port", "8080"]
