feat/fastapi+telegram bot

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,15 @@ POSTGRES_DB=database
 
 # SQLAlchemy
 DATABASE_URL=postgresql://user:password@database:port/db
+
+# Fast API
+SECRET=secret
+ALGO=algo
+COST_PER_ROW=cost
+
+# Telegram Bot
+API_BASE=http://host:port
+TOKEN=TELEGRAM_BOT_TOKEN
+
+
+
