--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,14 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  bot:
+    build:
+      context: ./src/app/bot
+      dockerfile: Dockerfile
+    env_file: .env
+    depends_on:
+      - app
+
   init-db:
     build:
       context: .
