--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,17 @@ events {}
 http {
     server {
         listen 80;
+        server_name _;
+
+        location = / {
+            return 302 /docs;
+        }
+
         location / {
-            proxy_pass http://app:8080/;
+            proxy_pass         http://app:8080;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
