fix/switch to FastStream + pre-queue balance check

--- a/.env.template
+++ b/.env.template
@@ -15,5 +15,10 @@ COST_PER_ROW=cost
 API_BASE=http://host:port
 TOKEN=TELEGRAM_BOT_TOKEN
 
-
+# RabbitMQ
+RABBIT_URL=amqp://user:password@rabbitmq/
+QUEUE_NAME=name
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+RPC_REPLY_TIMEOUT=10
 
