feat(web, ui): SSR + HTMX web interface integrated.

--- a/.env.template
+++ b/.env.template
@@ -4,21 +4,21 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=database
 
 # SQLAlchemy
-DATABASE_URL=postgresql://user:password@database:port/db
+DATABASE_URL=postgresql://user:password@database:port/database
 
 # Fast API
 SECRET=secret
-ALGO=algo
-COST_PER_ROW=cost
+ALGO=encode
+COST_PER_ROW=1
+AVAILABLE_MODELS=["Demo"]
 
 # Telegram Bot
-API_BASE=http://host:port
-TOKEN=TELEGRAM_BOT_TOKEN
+API_BASE=http://app:port/
+TG_BOT_TOKEN=token
 
 # RabbitMQ
 RABBIT_URL=amqp://user:password@rabbitmq/
-QUEUE_NAME=name
+QUEUE_NAME=name_tasks
 RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
-RPC_REPLY_TIMEOUT=10
-
+RPC_REPLY_TIMEOUT=1
