fix/point API_BASE to /api endpoint (correct base URL) (525862d)

--- a/.env.template
+++ b/.env.template
@@ -13,7 +13,7 @@ COST_PER_ROW=1
 AVAILABLE_MODELS=["Demo"]
 
 # Telegram Bot
-API_BASE=http://app:port/
+API_BASE=http://app:port/api
 TG_BOT_TOKEN=token
 
 # RabbitMQ
