--- a/.env.template
+++ b/.env.template
@@ -8,9 +8,9 @@ DATABASE_URL=postgresql://user:password@database:port/database
 
 # Fast API
 SECRET=secret
-ALGO=encode
+ALGO=method
 COST_PER_ROW=1
-AVAILABLE_MODELS=["Demo"]
+AVAILABLE_MODELS=""
 
 # Telegram Bot
 API_BASE=http://app:port/api
@@ -21,4 +21,9 @@ RABBIT_URL=amqp://user:password@rabbitmq/
 QUEUE_NAME=name_tasks
 RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
-RPC_REPLY_TIMEOUT=1
+RPC_REPLY_TIMEOUT=10
+
+# pytest
+POLL_TIMEOUT=60
+POLL_EVERY=1.0
+WAIT_TIMEOUT=120
